resources/css/theme.css
/* ... */
input[type="range"] {
    accent-color: var(--control-checked-bgColor-rest);
}

[dir] .wt-facts-table .wt-sex-f td {
    background-color: var(--sex-f-bg);
}

[dir] .wt-facts-table .wt-sex-m td {
    background-color: var(--sex-m-bg);
}

.wt-footer {
    font-size: var(--h6-size, 12px) !important;
    color: var(--fgColor-muted);
    --link-color: var(--fgColor-muted);
}

[dir] .odometer {
    background: var(--bgColor-neutral-muted);
}

.odometer {
    border: var(--borderWidth-thin) solid var(--counter-borderColor);
    border-radius: 2em;
    color: var(--fgColor-default);
    font-family: inherit;
    font-size: var(--text-body-size-small);
    font-weight: var(--base-text-weight-medium);
    padding: 0 6px;
    text-align: center;
}

.Counter {
    display: inline-block;
    line-height: calc(var(--base-size-20) - var(--borderWidth-thin)*2);
    min-width: var(--base-size-20);
}

.wt-initial.active {
    color: var(--fgColor-onEmphasis);
}

.nav {
    --bs-nav-link-padding-x: var(--base-size-8);
    --bs-nav-link-padding-y: var(--base-size-4);
}

[dir] .wt-tabs-individual .nav-tabs .nav-link:hover {
    background-color: var(--bgColor-neutral-muted);
    transition: background 0.12s ease-out;
    border-radius: var(--borderRadius-medium);
}

[dir] .nav-tabs .nav-link {
    border: none;
    margin-bottom: 0;
}

[dir] .nav-tabs .nav-link.active {
    font-weight: var(--base-text-weight-semibold);
    border: none;
}

.nav-tabs .nav-item:has(.nav-link.active) {
    border-bottom-color: var(--underlineNav-borderColor-active);
    border-bottom-width: var(--borderWidth-thick);
    border-bottom-style: solid;
}

.wt-main-container .nav-item {
    padding-bottom: var(--base-size-8);
}

[dir] .dropdown-item {
    color: var(--control-fgColor-rest);
    margin-left: var(--base-size-8);
    margin-right: var(--base-size-8);
}

[dir] .dropdown-item.active, [dir] .dropdown-item:active {
    background-color: var(--control-transparent-bgColor-selected);
    border-radius: var(--borderRadius-medium);
}

[dir] .dropdown-item:hover, [dir] .dropdown-item.active:hover, [dir] span.twitter-typeahead .tt-suggestion:focus, [dir] span.twitter-typeahead .tt-suggestion:hover {
    background-color: var(--control-transparent-bgColor-hover);
    color: var(--control-fgColor-rest);
    border-radius: var(--borderRadius-medium);
}

.dropdown-item.active:focus, .dropdown-item.active:hover, span.twitter-typeahead .active.tt-suggestion, span.twitter-typeahead .active.tt-suggestion:focus, span.twitter-typeahead .active.tt-suggestion:hover, span.twitter-typeahead .tt-suggestion.tt-cursor, span.twitter-typeahead .tt-suggestion.tt-cursor:focus, span.twitter-typeahead .tt-suggestion.tt-cursor:hover {
    background-color: var(--control-transparent-bgColor-selected);
    color: var(--control-fgColor-rest);
}

[dir] .form-control {
    background-color: var(--bgColor-muted, var(--color-canvas-inset));
    font-size: var(--bs-body-font-size);
}

[dir] .accordion-button.collapsed::after {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%238F95A0'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
}

[dir] .accordion-button:not(.collapsed)::after {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%238F95A0'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
}

[dir] .accordion-button:focus {
    box-shadow: 0 1px var(--bs-border-color) !important;
}

.wt-site-title {
    font-size: var(--body-font-size);
}

.wt-page-title {
    font-size: var(--h3-size);
}

.wt-genealogy-menu {
    justify-content: left;
}

[dir] .wt-global, [dir] ::backdrop {
    background-color: var(--bs-body-bg);
    color: var(--bs-body-color);
    font-size: var(--body-font-size);
}

.wt-global, ::backdrop {
    color: var(--bs-body-color);
}

.wt-global {
    overflow-y: auto;
}

[dir] .form-check-input {
    color: var(--fgColor-default);
    background-color: var(--bgColor-default);
    border: var(--borderWidth-thin) solid var(--control-borderColor-rest, var(--color-border-default));
}

[dir] .form-check-input:checked {
    background-color: var(--control-checked-bgColor-rest, var(--color-accent-fg));
    border-color: var(--control-checked-borderColor-rest, var(--color-accent-fg));
    transition: background-color, border-color 80ms cubic-bezier(0.32, 0, 0.67, 0) 0ms;
}

input[type="search"] {
    background-color: transparent;
    border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
    border-radius: var(--bs-border-radius);
    padding: 0.25rem 0.5rem;
}

.ts-control, .ts-control input, .ts-dropdown {
    color: var(--bs-body-color);
}

[dir] .wt-header-wrapper {
    background: var(--bgColor-inset);
}

#quick-search {
    background: transparent;
    border-radius: var(--bs-border-radius);
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
}

[dir] .wt-primary-navigation {
    border-bottom-width: var(--borderWidth-thin);
    border-color: var(--bs-border-color);
}

[dir] .table {
    margin-bottom: 0.75rem;
}

[dir] .wt-facts-table {
    border-collapse: separate;
}

[dir] .wt-facts-table tr > * {
    border: none;
    border-bottom: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
    color: var(--bs-body-color);
}

[dir] .wt-facts-table th {
    background-color: var(--bgColor-muted);
}

[dir] .wt-facts-table td {
    border-right: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
}

[dir] .wt-facts-table tr > :first-child {
    border-left: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
}
/* ... */

